feat: login redirect

--- a/CLASS_B/yun/public/login.html
+++ b/CLASS_B/yun/public/login.html
@@ -86,6 +86,7 @@
                         result.forEach(doc => {
                             if (doc.data().uid == 성공.user.uid) {
                                 alert("로그인 성공 = " + doc.data().uid)
+                                window.location.href = "index.html";
                             }
                         })
                     })
