--- a/CLASS_B/hwan/public/login.html
+++ b/CLASS_B/hwan/public/login.html
@@ -79,6 +79,8 @@
               console.log(doc.data().uid)
               if(doc.data().uid == 성공.user.uid){
                 alert("로그인 성공="+doc.data().uid)
+                
+                window.location.href = "index.html";
               }
             })
           })
