--- a/CLASS_C/유상완/public/login.html
+++ b/CLASS_C/유상완/public/login.html
@@ -82,6 +82,7 @@
 
               if(result.user.uid == doc.data().uid){
                 alert(doc.data().name + " 님 환영합니다!")
+                window.location.href = "index.html"
               }
             })
           })
