--- a/CLASS_C/jang/public/login.html
+++ b/CLASS_C/jang/public/login.html
@@ -89,6 +89,8 @@
 
               if(result.user.uid == doc.data().uid) {
                 alert(doc.data().name + " 님 환영합니다!")
+
+                window.location.href = "index.html"
               }
               
             })
