--- a/CLASS_C/Park/public/login.html
+++ b/CLASS_C/Park/public/login.html
@@ -88,6 +88,7 @@
 
             if (result.user.uid == doc.data().uid) {
               alert(doc.data().name + " 님 환영합니다!")
+              window.location.href = "index.html"
             }
           })
         })
